--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,30 @@
             <version>1.0.1</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+            <version>2.13.2</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
+            <plugin>
+                <groupId>net.alchim31.maven</groupId>
+                <artifactId>scala-maven-plugin</artifactId>
+                <version>4.4.0</version>
+                <executions>
+                    <execution>
+                        <id>scala-compile</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                            <goal>compile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <!--
                   Google Cloud Functions Framework Maven plugin
@@ -38,7 +59,8 @@
                 <artifactId>function-maven-plugin</artifactId>
                 <version>0.9.2</version>
                 <configuration>
-                    <functionTarget>functions.HelloWorld</functionTarget>
+                    <functionTarget>com.ryansusana.scala.Main</functionTarget>
+                    <name>Ryan1</name>
                 </configuration>
             </plugin>
         </plugins>
