--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,4 +2,4 @@ steps:
   - name: 'gcr.io/cloud-builders/mvn'
     args: ['clean', 'verify']
   - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['functions', 'deploy', 'scala-app', '--trigger-http', '--runtime', 'java11', '--entry-point', 'com.ryansusana.scala.Main']
+    args: ['functions', 'deploy', 'scala-app', '--allow-unauthenticated', '--trigger-http', '--runtime', 'java11', '--entry-point', 'com.ryansusana.scala.Main']
