--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,4 +2,4 @@ steps:
   - name: 'gcr.io/cloud-builders/mvn'
     args: ['clean', 'verify']
   - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['functions', 'deploy', 'scala-app1', '--trigger-http', '--runtime', 'java11', '--entry-point', 'com.ryansusana.scala.Main', '--allow-unauthenticated']
+    args: ['functions', 'deploy', 'scala-app1', '--trigger-http', '--service-account', 'scala-app@learning-265808.iam.gserviceaccount.com', '--runtime', 'java11', '--entry-point', 'com.ryansusana.scala.Main', '--allow-unauthenticated']
