--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,13 @@
         <maven.compiler.source>11</maven.compiler.source>
     </properties>
 
+
     <dependencies>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-language</artifactId>
+            <version>1.100.0</version>
+        </dependency>
         <!-- Required for Function primitives -->
         <dependency>
             <groupId>com.google.cloud.functions</groupId>
