--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
             <artifactId>google-cloud-language</artifactId>
             <version>1.100.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.13.1</version>
+        </dependency>
         <!-- Required for Function primitives -->
         <dependency>
             <groupId>com.google.cloud.functions</groupId>
